--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,28 +11,29 @@
     <uses-permission-sdk-23 android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-        android:name="haiphat.com.bds.nghetuvan.BaseApplication"
+        android:name=".BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="haiphat.com.bds.nghetuvan.view.SplashActivity">
+        <activity android:name=".view.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="haiphat.com.bds.nghetuvan.view.auth.LoginActivity" />
-        <activity android:name="haiphat.com.bds.nghetuvan.view.auth.RegisterActivity" />
-        <activity android:name="haiphat.com.bds.nghetuvan.view.auth.ForgotPasswordActivity" />
+        <activity android:name=".view.auth.LoginActivity" />
+        <activity android:name=".view.auth.RegisterActivity" />
+        <activity android:name=".view.auth.ForgotPasswordActivity" />
         <activity
-            android:name="haiphat.com.bds.nghetuvan.view.HomeActivity"
+            android:name=".view.HomeActivity"
             android:label="@string/title_action_bar_home"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name="haiphat.com.bds.nghetuvan.view.news.NewsActivity"></activity>
+        <activity android:name=".view.news.NewsActivity" />
+        <activity android:name=".view.partner.PartnerActivity"></activity>
     </application>
 
 </manifest>
