--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,8 @@
         <activity android:name=".view.news.NewsActivity" />
         <activity android:name=".view.partner.PartnerActivity" />
         <activity android:name=".view.news.DetailNewsActivity" />
-        <activity android:name=".view.partner.PartnerDetailActivity"></activity>
+        <activity android:name=".view.partner.PartnerDetailActivity" />
+        <activity android:name=".view.news.ReplyNewsCommentActivity"></activity>
     </application>
 
 </manifest>
