--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
         <activity android:name=".view.partner.PartnerActivity" />
         <activity android:name=".view.news.DetailNewsActivity" />
         <activity android:name=".view.partner.PartnerDetailActivity" />
-        <activity android:name=".view.news.ReplyNewsCommentActivity"></activity>
+        <activity android:name=".view.profile.ContactEmailActivity"></activity>
     </application>
 
 </manifest>
