--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="haiphat.com.bds.nghetuvan"
@@ -32,7 +31,6 @@
         <activity
             android:name="com.soundcloud.android.crop.CropImageActivity"
             android:screenOrientation="portrait" />
-
         <activity android:name=".view.SplashActivity">
             <intent-filter android:autoVerify="true">
                 <action android:name="android.intent.action.VIEW" />
@@ -69,7 +67,8 @@
 
         <activity android:name=".view.news.PostCommentActivity" />
         <activity android:name=".view.profile.UpdateInformationActivity" />
-        <activity android:name=".view.profile.ChangePasswordActivity"></activity>
+        <activity android:name=".view.profile.ChangePasswordActivity" />
+        <activity android:name=".view.ShowListHomeActivity"></activity>
     </application>
 
 </manifest>
