--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,7 +70,8 @@
         <activity android:name=".view.profile.ChangePasswordActivity" />
         <activity android:name=".view.home.ShowListHomeActivity" />
         <activity android:name=".view.home.DetailHomeActivity" />
-        <activity android:name=".view.home.TestActivity"></activity>
+        <activity android:name=".view.home.TestActivity" />
+        <activity android:name=".view.education.EducationDetailActivity"></activity>
     </application>
 
 </manifest>
