create desgin deposit and mock data

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,7 +72,8 @@
         <activity android:name=".view.home.DetailHomeActivity" />
         <activity android:name=".view.home.TestActivity" />
         <activity android:name=".view.education.EducationDetailActivity" />
-        <activity android:name=".view.online.DetailOnlineSalesActivity"></activity>
+        <activity android:name=".view.online.DetailOnlineSalesActivity" />
+        <activity android:name=".view.online.DepositActivity"></activity>
     </application>
 
 </manifest>
