--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,21 +47,21 @@ dependencies {
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     // okhttp library for connect API
-    compile 'com.squareup.okhttp3:logging-interceptor:3.10.0'
-    compile 'com.squareup.okhttp3:okhttp-urlconnection:3.10.0'
-    compile 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
+    implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.10.0'
+    implementation 'com.google.code.gson:gson:2.8.2'
     //
     kapt 'com.android.databinding:compiler:3.1.4'
-    compile 'com.android.support:multidex:1.0.3'
-    compile 'com.android.support:design:27.1.1'
-    compile 'com.afollestad.material-dialogs:core:0.9.4.5'
+    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.afollestad.material-dialogs:core:0.9.4.5'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
-    compile 'com.makeramen:roundedimageview:2.2.1'
-    compile 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.makeramen:roundedimageview:2.2.1'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
     // load html text view
-    compile 'org.sufficientlysecure:html-textview:3.5'
+    implementation 'org.sufficientlysecure:html-textview:3.5'
     //    compile 'com.facebook.android:facebook-android-sdk:4.34.0'
-    compile 'com.soundcloud.android:android-crop:1.0.1@aar'
+    implementation 'com.soundcloud.android:android-crop:1.0.1@aar'
     // show table view
-    compile 'com.evrencoskun.library:tableview:0.8.8'
+    implementation 'com.evrencoskun.library:tableview:0.8.8'
 }
