--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,6 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-
     <uses-permission-sdk-23 android:name="android.permission.CAMERA" />
     <uses-permission-sdk-23 android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
@@ -54,10 +53,9 @@
         <activity android:name=".view.auth.ForgotPasswordActivity" />
         <activity
             android:name=".view.home.HomeActivity"
-            android:label="@string/title_action_bar_home"
-            android:theme="@style/AppTheme.NoActionBar"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode"
-            />
+            android:label="@string/title_action_bar_home"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".view.profile.SettingActivity" />
         <activity android:name=".view.profile.HistoryTransactionsActivity" />
         <activity android:name=".view.news.DetailNewsActivity" />
@@ -77,7 +75,8 @@
         <activity android:name=".view.education.EducationDetailActivity" />
         <activity android:name=".view.online.DetailOnlineSalesActivity" />
         <activity android:name=".view.online.DepositActivity" />
-        <activity android:name=".view.online.ViewCustomerInformationActivity"></activity>
+        <activity android:name=".view.online.ViewCustomerInformationActivity" />
+        <activity android:name=".view.project.ProjectWareHouseDetailActivity"></activity>
     </application>
 
 </manifest>
