--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,7 +77,8 @@
         <activity android:name=".view.online.DepositActivity" />
         <activity android:name=".view.online.ViewCustomerInformationActivity" />
         <activity android:name=".view.project.ProjectWareHouseDetailActivity" />
-        <activity android:name=".view.project.ProjectSetCalendarActivity"></activity>
+        <activity android:name=".view.project.ProjectSetCalendarActivity" />
+        <activity android:name=".view.project.ProjectPaymentActivity"></activity>
     </application>
 
 </manifest>
