--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,5 @@ dependencies {
     implementation 'com.soundcloud.android:android-crop:1.0.1@aar'
     // show table view
     implementation 'com.evrencoskun.library:tableview:0.8.8'
+    implementation 'com.github.faranjit:currency-edittext:1.0.1'
 }
